--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,24 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+ .active{
   color: white;
-}
+  text-decoration: none;
+ }
+ header nav ul{
+  display: flex;
+  align-items: center;
+  background-color: rgb(61, 61, 61);
+  text-decoration: none;
+ }
+ header nav ul li{
+  margin-right: 2rem;
+  text-decoration: none;
+  color: white;
+  list-style-type: none;
+  
+   
 
-.App-link {
-  color: #61dafb;
-}
+ }
+ li NavLink{
+  text-decoration: underline;
+  color: white;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+ }
